<resources>
    <string name="app_name">Jojo Vehicle App</string>
    <string name="ware_house">&#xe003;</string>
    <string name="hand_over">&#xe002;</string>
    <string name="transit_vehicle">&#xe000;</string>
    <string name="left_arrow">&#xe004;</string>
    <string name="right_arrow">&#xe006;</string>
    <string name="location_icon">&#xe005;</string>
    <string name="right_icon">&#xe001;</string>
    <string name="wrong_icon">&#xe007;</string>
    <string name="task">&#xe009;</string>
    <string name="hash_number">&#xe008;</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forget_password_text">Please enter your email id</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="action_settings">Notifications</string>
    <string name="stop">Stop</string>
    <string name="prev_text">Prev</string>
    <string name="next_text">Next</string>
    <string name="notification_no"> Notification No</string>
    <string name="empty_display">No Data to display</string>
    <string name="load_details">Load Details</string>
    <string name="in_transit_packet">In Transit Packet</string>
    <string name="pick_up_packet">Pick up Packet</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
</resources>
