<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#0099CC" >

        <TextView
            android:id="@+id/regBackBtnId"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_back"
            android:gravity="left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/forgot_password_heading"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           
            android:background="#0099CC"
            android:onClick="forgetPassword"
            android:padding="10dp"
            android:text="@string/submit"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <!--
         <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/welcome"
        android:tileMode="repeat" />
    -->

    <EditText
        android:id="@+id/forgetEmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:hint="@string/forget_password_text"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="#bbbbbb" />

</RelativeLayout>